src/css/player.css
/* ... */
.op-controls--hidden .op-player__loader,
.op-controls--hidden .op-player__play {
    top: 50%;
}
.op-controls--hidden .op-player__play {
    margin-top: -26px;
}
.op-player__play::-moz-focus-inner,
.op-settings__back,
.op-controls > button::-moz-focus-inner {
    border-style: none;
    padding: 0;
}
.op-player__play:-moz-focusing,
.op-settings__back,
.op-controls > button:-moz-focusing {
    outline: 1px dotted ButtonText;
}
.op-controls > button:before {
    color: #fff;
    display: inline-block;
    font-family: 'open-player';
    font-size: 1.5em;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-style: normal;
    font-variant: normal;
    font-weight: normal;
    height: 15px;
    justify-content: flex-start;
    line-height: 1em;
    margin-left: 0.2em;
    margin-right: 0.2em;
    speak: none;
    text-align: center;
    text-decoration: inherit;
    text-transform: none;
    width: 15px;
}
.op-controls > .op-control__right {
    margin-left: auto;
}
.op-controls > .op-control__right ~ .op-control__right {
    margin-left: 0;
}
.op-controls > button:hover {
    opacity: 0.5;
}
.op-controls input[type='range'],
.op-controls > button {
    touch-action: manipulation;
}
.op-controls input[type=range]::-ms-tooltip {
    display: none;
}

/* === Time =================== */
.op-controls > time {
    margin-top: 4px;
}
.op-controls__time-delimiter {
    margin: 4px 3px 0;
}

/* === Buttons =================== */
.op-controls__playpause:before {
    content: '\e810';
}
.op-controls__playpause--pause:before {
    content: '\e80d';
}
.op-controls__playpause--replay:before {
    content: '\e80c';
}
.op-controls__fullscreen:before {
    content: '\e811';
}
.op-controls__fullscreen--out:before {
    content: '\e812';
}
.op-controls__mute:before {
    content: '\e816';
}
.op-controls__mute--half:before {
    content: '\e814';
}
.op-controls__mute--muted:before {
    content: '\e815';
}
.op-controls__captions:before {
    content: '\e809';
}
.op-controls__settings:before { 
    content: '\e800'; 
}

/* === Settings =================== */
.op-settings {
    background: rgba(28, 28, 28, 0.9);
    bottom: 48px;
    color: #fff;
    font-size: 0.85em;
    overflow: hidden;
    position: absolute;
    right: 5px;
    text-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
    transition: right 0.2s ease;
    user-select: none;
    will-change: width,height;
    z-index: 4;
}
.op-player__audio .op-settings {
    bottom: 32px;
    right: 0;
}
.op-settings--sliding {
    right: -999px;
}
.op-settings__menu {
    margin: 0;
    overflow-x: hidden;
    overflow-y: auto;
    padding: 0;
}
.op-settings__menu-item,
.op-settings__submenu-item {
    display: table-row;
    outline: none;
    padding: 0;
}
.op-settings__menu-label,
.op-settings__submenu-label {
    display: table-cell;
    padding: 5px 15px;
    vertical-align: middle;
}
.op-settings__submenu-item,
.op-settings__submenu-label {
    display: block;
}
.op-settings__submenu-item {
    cursor: pointer;
}
.op-settings__submenu-item[aria-checked='true'] .op-settings__submenu-label {
    background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGhlaWdodD0iMTAwJSIgdmVyc2lvbj0iMS4xIiB2aWV3Qm94PSIwIDAgMjQgMjQiIHdpZHRoPSIxMDAlIj48cGF0aCBkPSJNOSAxNi4yTDQuOCAxMmwtMS40IDEuNEw5IDE5IDIxIDdsLTEuNC0xLjRMOSAxNi4yeiIgZmlsbD0iI2ZmZiIgLz48L3N2Zz4=');
    background-position: left 4px center;
    background-repeat: no-repeat;
    background-size: 18px;
    padding: 8px 15px 8px 25px;
}
.op-settings__menu-content {
    background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGhlaWdodD0iMTAwJSIgdmVyc2lvbj0iMS4xIiB2aWV3Qm94PSIwIDAgMzIgMzIiIHdpZHRoPSIxMDAlIj48cGF0aCBkPSJtIDEyLjU5LDIwLjM0IDQuNTgsLTQuNTkgLTQuNTgsLTQuNTkgMS40MSwtMS40MSA2LDYgLTYsNiB6IiBmaWxsPSIjZmZmIiAvPjwvc3ZnPg==');
    background-position: right 0 center;
    background-repeat: no-repeat;
    background-size: 32px 32px;
    cursor: pointer;
    display: table-cell;
    padding: 0 15px;
    padding-right: 38px;
    vertical-align: middle;
}
.op-settings__header {
    padding: 5px;
}
.op-settings__back {
    background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGhlaWdodD0iMTAwJSIgdmVyc2lvbj0iMS4xIiB2aWV3Qm94PSIwIDAgMzIgMzIiIHdpZHRoPSIxMDAlIj48cGF0aCBkPSJNIDE5LjQxLDIwLjA5IDE0LjgzLDE1LjUgMTkuNDEsMTAuOTEgMTgsOS41IGwgLTYsNiA2LDYgeiIgZmlsbD0iI2ZmZiIgLz48L3N2Zz4=');
    background-position: left 0 center;
    background-repeat: no-repeat;
    background-size: 20px 32px;
    color: inherit;
    height: 100%;
    padding: 0 10px 0 20px;
}

/* === Progress / Volume =================== */
.op-controls input[type='range'],
.op-controls progress {
    appearance: none;
    border: 0;
    height: 5px;
    left: 0;
    margin: 0;
    position: absolute;
    top: 0;
    transition: none;
    width: 100%;
}
.op-controls input[type='range'] {
    background: transparent;
    -webkit-tap-highlight-color: transparent;
    z-index: 3;
}
.op-controls input[type='range']:focus,
.op-controls progress {
    outline: none;
}
.op-controls input[type='range']::-moz-focus-outer {
    border: 0;
}
.op-controls input[type='range']::-webkit-slider-runnable-track {
    background: 0 0;
    border: 0;
    cursor: pointer;
    height: 8px;
    user-select: none;
}
.op-controls input[type='range']::-moz-range-track {
    background: 0 0;
    border: 0;
    cursor: pointer;
    height: 8px;
    user-select: none;
}
.op-controls input[type='range']::-ms-track {
    background: 0 0;
    border: 0;
    cursor: pointer;
    height: 8px;
    user-select: none;
}

.op-controls input[type='range']::-webkit-slider-thumb {
    appearance: none;
    background: #fff;
    border: 2px solid transparent;
    border-radius: 100%;
    box-sizing: border-box;
    height: 12px;
    margin-top: -2px;
    position: relative;
    width: 12px;
}
/* ... */

